argocd/dawarich/manifests/sidekiq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dawarich-sidekiq
  template:
    metadata:
      labels:
        app: dawarich-sidekiq
    spec:
      containers:
        - name: sidekiq
          image: harbor.yanello.net/docker/freikin/dawarich:1.15.3@sha256:589e3606b11b61c3fa2d9661832cb73645a9b93a9cc7d807a071e2bc6c584498
          command: ["sidekiq-entrypoint.sh"]
          args: ["sidekiq"]
          volumeMounts:
            - name: public
              mountPath: /var/app/public
            - name: watched
              mountPath: /var/app/tmp/imports/watched
            - name: storage
              mountPath: /var/app/storage
          livenessProbe:
            exec:
              command: ["pgrep", "-f", "sidekiq"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 30
          readinessProbe:
            exec:
              command: ["pgrep", "-f", "sidekiq"]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 30
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
          stdin: true
          tty: true
      volumes:
        - name: public
          persistentVolumeClaim:
            claimName: dawarich-public
        - name: watched
          persistentVolumeClaim:
            claimName: dawarich-watched
        - name: storage
          persistentVolumeClaim:
            claimName: dawarich-storage
      restartPolicy: Always
