argocd/dawarich/manifests/photon.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photon
spec:
  serviceName: photon
  replicas: 1
  selector:
    matchLabels:
      app: photon
  template:
    metadata:
      labels:
        app: photon
    spec:
      containers:
        - name: photon
          image: ubuntu:latest
          command: ["sleep inf"]
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /photon/photon_data
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-hdd
        resources:
          requests:
            storage: 100Gi
---
apiVersion: v1
kind: Service
metadata:
  name: photon
spec:
  selector:
    app: photon
  ports:
    - port: 2322
      targetPort: 2322
      name: http
  type: ClusterIP
