argocd/dawarich/manifests/redis.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dawarich-redis
spec:
  serviceName: dawarich-redis
  replicas: 1
  selector:
    matchLabels:
      app: dawarich-redis
  template:
    metadata:
      labels:
        app: dawarich-redis
      annotations:
        backup.velero.io/backup-volumes: data-dawarich-redis-0
    spec:
      containers:
        - name: redis
          image: harbor.yanello.net/docker/redis:8.10.2-alpine@sha256:3811787313eba226a2ef38658c6ccb91cd5e110edc89c37767de373120a0e5a0
          command: ["redis-server"]
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: data
              mountPath: /data
            - name: shared
              mountPath: /shared
          livenessProbe:
            exec:
              command: ["redis-cli", "--raw", "incr", "ping"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            exec:
              command: ["redis-cli", "--raw", "incr", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: dawarich-shared
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd-nfs
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich-redis
spec:
  selector:
    app: dawarich-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  clusterIP: None
