argocd/dawarich/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: dawarich
  name: dawarich-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - dawarich.yanello.net
  rules:
    - backendRefs:
        - name: dawarich-app
          port: 3000
