argocd/dawarich/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dawarich-web
spec:
  endpointSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - dawarich-app
          - dawarich-sidekiq
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: dawarich
            app: dawarich-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: dawarich
            app: dawarich-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: dawarich
            app: dawarich-app
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dawarich-data
spec:
  endpointSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - dawarich-db
          - dawarich-redis
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: app
              operator: In
              values:
                - dawarich-app
                - dawarich-sidekiq
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "6379"
              protocol: TCP
  egressDeny:
    - toEntities:
        - world
